*
*/

Bjørn Rohde Jensen <brj@statsbiblioteket.dk>

????-??-?? Bjørn Rohde Jensen <brj@statsbiblioteket.dk>
        * Release 5.0.1
        * Fixed a bug where the 'url' parameter was required even when displaying a logged out page.
        * Fixed a bug where attributes were always transferred regardless of the 'attributes' value in
         module_sbcasserver.php.

2013-11-04 Bjørn Rohde Jensen <brj@statsbiblioteket.dk>
        * Release 5.0.0
        * Removed support for storing tickets in proprietary key-value store AttributeStore.
        * Added support for storing tickets in a SQL database.
        * Added support for storing tickets in memcached.
        * Added support for proxy tickets.
        * Added support for renewing login.
        * Added an optional logged out landing page with a return url.
        * Added support for specifying an idp during login thus skipping the wayf step.
        * Added support for specifying a language hint during login.

2013-01-29 Bjørn Rohde Jensen <brj@statsbiblioteket.dk>
        * Release 4.0.0
        * Moved all filters to a dedicated project.
        * Moved theme related code into the sbthemes project.
        * Added an abstract cas ticket store with concrete subclasses to store tickets locally or in the attribute store.
        * Changed cas 2.0 response generation from hand coded to using php dom document.
        * Fixed a bug in cas 1.0 response generation, where yes/no was returned in upper case.

2012-10-31 Bjørn Rohde Jensen <brj@statsbiblioteket.dk>
        * release 3.3.0
        * IPRoleMapper can now be configured to add its roles to any given attribute
          by setting the filter parameter 'targetAttributeName'.

2012-10-24 Bjørn Rohde Jensen <brj@statsbiblioteket.dk>

        * release 3.2
        * Added AttributeCollector auth filter for collecting attributes from
	      the attribute store.
        * Added CAS logout

2012-05-22  Per Møldrup-Dalum  <pdj@statsbiblioteket.dk>

	* release 3.1